tests/good/test030.tig
let
  type a = array of int
  var x := a[3] of 42
  var i := 1
in
  print_int(x[i])
end

