tests/bad/bad01.tig
let
  type a = array of int
  var x := a[3] of 42
in
  print_int(x[3])
end
